Fix: Align interest

--- a/frent/src/pages/profile/profileEdits.css
+++ b/frent/src/pages/profile/profileEdits.css
@@ -72,7 +72,6 @@
   color: white;
   padding: 8px 11px;
   border-radius: 10px;
-  margin-top: 7px;
   margin: 5px;
   width: auto;
   display: inline-block;
